[gd_scene load_steps=61 format=2]

[ext_resource path="res://assets/mapas/CenaFase3.png" type="Texture" id=1]
[ext_resource path="res://assets/Ui/fundo alto direita vermelho.jpeg" type="Texture" id=2]
[ext_resource path="res://assets/characters/rafaProtagonista.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/Keyboard Letters and Symbols.png" type="Texture" id=4]
[ext_resource path="res://scripts/fase_1/tutorial2.gd" type="Script" id=5]
[ext_resource path="res://assets/fontes/VT323-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/fase_2/fase_2.gd" type="Script" id=7]
[ext_resource path="res://scripts/fase_2/Dialog1.gd" type="Script" id=8]
[ext_resource path="res://assets/Ui/fundo baixo esquerda vermelho.jpeg" type="Texture" id=9]
[ext_resource path="res://assets/aúdios/botões no pause.wav" type="AudioStream" id=10]
[ext_resource path="res://players/fase_2/fase2_rafa_protagonista.gd" type="Script" id=11]
[ext_resource path="res://assets/6_Office_Designs/cenario_fase1_objects.png" type="Texture" id=12]
[ext_resource path="res://assets/6_Office_Designs/office design objects.png" type="Texture" id=13]
[ext_resource path="res://assets/3_Modern_Office_Shadowless/4_Modern_Office_singles/48x48/Modern_Office_Singles_48x48_155.png" type="Texture" id=14]
[ext_resource path="res://assets/Ui/decision_default.png" type="Texture" id=15]
[ext_resource path="res://assets/Ui/main_background_quiz.jpg" type="Texture" id=16]
[ext_resource path="res://assets/3_Modern_Office_Shadowless/4_Modern_Office_singles/48x48/Modern_Office_Singles_48x48_154.png" type="Texture" id=17]
[ext_resource path="res://scripts/fase_2/fase2_andre.gd" type="Script" id=18]
[ext_resource path="res://assets/Ui/acertou_conteúdo.png" type="Texture" id=22]
[ext_resource path="res://assets/Ui/back_transparent.png" type="Texture" id=23]
[ext_resource path="res://assets/Ui/errou_conteúdo.png" type="Texture" id=24]
[ext_resource path="res://assets/aúdios/music_below.mp3" type="AudioStream" id=25]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.5626, 49 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 183, 48.9999 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 253.313, 70.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 191.188, 9.12524 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20.5, 21 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 52 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7.53133, 30.5311 )

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 124.125, 14.4999 )

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 76.6252, 45.1248 )

[sub_resource type="RectangleShape2D" id=32]

[sub_resource type="Animation" id=23]
resource_name = "andandobaixo"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=24]
resource_name = "andandocima"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=25]
resource_name = "andandoladod"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=26]
resource_name = "andandoladoe"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=27]
resource_name = "idle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=28]
resource_name = "idlecima"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 49 ]
}

[sub_resource type="Animation" id=29]
resource_name = "parada"

[sub_resource type="CapsuleShape2D" id=30]
radius = 11.0
height = 14.0

[sub_resource type="StreamTexture" id=45]
load_path = "res://.import/Character_001.png-637a9cb821e8be1f60a74d083c762262.stex"

[sub_resource type="Animation" id=54]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture:resource_path")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "" ]
}

[sub_resource type="Animation" id=46]
resource_name = "andandobaixo"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:texture:resource_path")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}

[sub_resource type="Animation" id=47]
resource_name = "andandocima"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=48]
resource_name = "andandoladod"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=49]
resource_name = "andandoladoe"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=50]
resource_name = "idle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=51]
resource_name = "idlecima"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 49 ]
}

[sub_resource type="Animation" id=52]
resource_name = "parada"

[sub_resource type="CapsuleShape2D" id=53]
radius = 13.0
height = 14.0

[sub_resource type="Animation" id=9]
resource_name = "idleCima"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "pressCima"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 56, 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idleBaixo"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=12]
resource_name = "pressBaixo"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 57, 1 ]
}

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=55]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=56]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=57]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=58]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=22]
resource_name = "movendo"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 5 ), Vector2( 4, 3 ), Vector2( 4, 5 ), Vector2( 4, 3 ) ]
}

[node name="fase_2" type="Node2D"]
script = ExtResource( 7 )

[node name="cenario" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="FundoBaixoEsquerdaVermelho" type="Sprite" parent="cenario"]
position = Vector2( 320, 187.495 )
scale = Vector2( 0.623815, 0.624983 )
texture = ExtResource( 9 )

[node name="CenaFase3" type="Sprite" parent="cenario"]
position = Vector2( 319, 138 )
texture = ExtResource( 1 )

[node name="paredesInvisiveis" type="StaticBody2D" parent="cenario/CenaFase3"]
position = Vector2( -315.499, 14 )
scale = Vector2( 0.999997, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cenario/CenaFase3/paredesInvisiveis"]
position = Vector2( 24.937, -55.9999 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="cenario/CenaFase3/paredesInvisiveis"]
position = Vector2( 213.5, -70.9999 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="cenario/CenaFase3/paredesInvisiveis"]
position = Vector2( 247.187, 132 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="cenario/CenaFase3/paredesInvisiveis"]
position = Vector2( 290.5, 67.9998 )
shape = SubResource( 4 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="cenario/CenaFase3/paredesInvisiveis"]
position = Vector2( 477, -78 )
shape = SubResource( 6 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="cenario/CenaFase3/paredesInvisiveis"]
position = Vector2( -18, 3 )
shape = SubResource( 8 )

[node name="mesa02" type="CollisionShape2D" parent="cenario/CenaFase3/paredesInvisiveis"]
position = Vector2( 513.969, -83.9999 )
shape = SubResource( 7 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="cenario/CenaFase3/paredesInvisiveis"]
position = Vector2( 516.501, -109 )
shape = SubResource( 42 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="cenario/CenaFase3/paredesInvisiveis"]
position = Vector2( 558.876, 38.8749 )
shape = SubResource( 43 )

[node name="icone_mesa" type="Polygon2D" parent="cenario"]
visible = false
position = Vector2( 264, 137 )
texture = ExtResource( 13 )
polygon = PoolVector2Array( 145, 133, 139.973, 133, 135, 133, 140, 140 )

[node name="Area2D" type="Area2D" parent="cenario/icone_mesa"]
monitoring = false

[node name="collision" type="CollisionShape2D" parent="cenario/icone_mesa/Area2D"]
position = Vector2( 140, 135 )
shape = SubResource( 32 )

[node name="Personagens" type="Node2D" parent="."]

[node name="fase1_rafa_protagonista" type="KinematicBody2D" parent="Personagens"]
position = Vector2( 23, 171 )
script = ExtResource( 11 )

[node name="sprite" type="Sprite" parent="Personagens/fase1_rafa_protagonista"]
position = Vector2( 5.002, -5.002 )
scale = Vector2( 2.24983, 2.24983 )
texture = ExtResource( 3 )
hframes = 16
vframes = 4

[node name="anim" type="AnimationPlayer" parent="Personagens/fase1_rafa_protagonista"]
anims/andandobaixo = SubResource( 23 )
anims/andandocima = SubResource( 24 )
anims/andandoladod = SubResource( 25 )
anims/andandoladoe = SubResource( 26 )
anims/idle = SubResource( 27 )
anims/idlecima = SubResource( 28 )
anims/parada = SubResource( 29 )

[node name="collision" type="CollisionShape2D" parent="Personagens/fase1_rafa_protagonista"]
position = Vector2( 5, 1 )
shape = SubResource( 30 )

[node name="fase2_andre" type="KinematicBody2D" parent="Personagens"]
position = Vector2( 660, 120 )
script = ExtResource( 18 )

[node name="sprite" type="Sprite" parent="Personagens/fase2_andre"]
position = Vector2( 5.50201, -7.50201 )
scale = Vector2( 2.45816, 2.45816 )
texture = SubResource( 45 )
hframes = 16
vframes = 4

[node name="anim" type="AnimationPlayer" parent="Personagens/fase2_andre"]
anims/RESET = SubResource( 54 )
anims/andandobaixo = SubResource( 46 )
anims/andandocima = SubResource( 47 )
anims/andandoladod = SubResource( 48 )
anims/andandoladoe = SubResource( 49 )
anims/idle = SubResource( 50 )
anims/idlecima = SubResource( 51 )
anims/parada = SubResource( 52 )

[node name="collision" type="CollisionShape2D" parent="Personagens/fase2_andre"]
position = Vector2( 4, 1 )
shape = SubResource( 53 )

[node name="botTutoriais" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="botcima" type="Sprite" parent="botTutoriais"]
position = Vector2( -182, 64 )
scale = Vector2( 3.0625, 3.0625 )
texture = ExtResource( 4 )
hframes = 8
vframes = 14

[node name="cimaAnim" type="AnimationPlayer" parent="botTutoriais/botcima"]
anims/idleCima = SubResource( 9 )
anims/pressCima = SubResource( 10 )

[node name="botbaixo" type="Sprite" parent="botTutoriais"]
position = Vector2( -115, 72 )
scale = Vector2( 3.063, 3.063 )
texture = ExtResource( 4 )
hframes = 8
vframes = 14
frame = 1

[node name="baixoAnim" type="AnimationPlayer" parent="botTutoriais/botbaixo"]
anims/idleBaixo = SubResource( 11 )
anims/pressBaixo = SubResource( 12 )

[node name="textTutorial" type="Label" parent="botTutoriais"]
margin_left = 170.0
margin_top = -3.0
margin_right = 440.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Vá até a cafeteira ao lado do ar condicionado."
align = 1
valign = 1

[node name="objects_cenario" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="CenarioFase1Objects" type="Sprite" parent="objects_cenario"]
visible = false
position = Vector2( 321.5, 179.5 )
scale = Vector2( 1.01094, 0.997253 )
texture = ExtResource( 12 )

[node name="papel_trabalho2" type="Sprite" parent="objects_cenario"]
visible = false
position = Vector2( 353.75, 221.041 )
scale = Vector2( 0.463547, 0.463551 )
texture = ExtResource( 17 )

[node name="papel_trabalho1" type="Sprite" parent="objects_cenario"]
visible = false
position = Vector2( 350, 223 )
scale = Vector2( 0.416665, 0.416667 )
texture = ExtResource( 14 )

[node name="quest_work" type="Control" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0

[node name="blush" type="TextureRect" parent="quest_work"]
margin_left = -1.0
margin_top = -2.0
margin_right = 639.0
margin_bottom = 358.0
texture = ExtResource( 23 )

[node name="main" type="TextureRect" parent="quest_work"]
margin_left = 128.0
margin_top = 78.0
margin_right = 514.0
margin_bottom = 286.0
texture = ExtResource( 16 )

[node name="quiz" type="Control" parent="quest_work"]
margin_right = 40.0
margin_bottom = 40.0

[node name="button_quiz" type="Button" parent="quest_work/quiz"]
margin_left = 227.0
margin_top = 152.0
margin_right = 414.0
margin_bottom = 224.0
text = "começar o trabalho"

[node name="quest_decision" type="Control" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0

[node name="blush" type="TextureRect" parent="quest_decision"]
margin_left = -1.0
margin_top = -2.0
margin_right = 639.0
margin_bottom = 362.0
texture = ExtResource( 23 )

[node name="main" type="TextureRect" parent="quest_decision"]
margin_left = 80.0
margin_top = 40.0
margin_right = 558.0
margin_bottom = 312.0
texture = ExtResource( 15 )
expand = true

[node name="quiz" type="Control" parent="quest_decision"]
margin_right = 40.0
margin_bottom = 40.0

[node name="right" type="Button" parent="quest_decision/quiz"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 162.0
margin_top = 149.0
margin_right = 490.0
margin_bottom = 189.0

[node name="wrong" type="Button" parent="quest_decision/quiz"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 161.0
margin_top = 200.0
margin_right = 489.0
margin_bottom = 240.0

[node name="wrong2" type="Button" parent="quest_decision/quiz"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 160.0
margin_top = 252.0
margin_right = 488.0
margin_bottom = 292.0

[node name="Label" type="Label" parent="quest_decision"]
margin_left = 149.0
margin_top = 60.0
margin_right = 509.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 55 )
text = "Como você lidaria com a situação de desconforto do André, que está tendo problemas para trabalhar com o Thomas e com pouca motivação para entregar o projeto?"
autowrap = true

[node name="Label4" type="Label" parent="quest_decision"]
margin_left = 173.0
margin_top = 155.0
margin_right = 484.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 56 )
text = "A) Dizer que esse conflito pode ser resolvido em outro momento com mais calma e que ele deve focar na entrega do projeto."
autowrap = true

[node name="Label5" type="Label" parent="quest_decision"]
margin_left = 170.0
margin_top = 205.0
margin_right = 481.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 56 )
text = "B) Oferecer uma solução a partir da conversa que teve com o André para encerrar rapidamente o conflito."
autowrap = true

[node name="Label6" type="Label" parent="quest_decision"]
margin_left = 170.0
margin_top = 256.0
margin_right = 481.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 56 )
text = "C) Tomar o conflito para si e procurar satisfazer as preocupações de ambos os lados do conflito."
autowrap = true

[node name="right_decision" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="FundoJogo21" type="Sprite" parent="right_decision"]
position = Vector2( 319.607, 181 )
scale = Vector2( 0.623815, 0.61 )
texture = ExtResource( 2 )

[node name="img_right_decision" type="TextureRect" parent="right_decision"]
margin_left = 19.0
margin_top = 38.0
margin_right = 617.0
margin_bottom = 378.0
texture = ExtResource( 22 )
expand = true

[node name="next_phase" type="Button" parent="right_decision"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 392.0
margin_top = 328.0
margin_right = 584.0
margin_bottom = 352.0

[node name="back_phase" type="Button" parent="right_decision"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 56.0
margin_top = 328.0
margin_right = 240.0
margin_bottom = 352.0

[node name="video_conteudo" type="VideoPlayer" parent="right_decision"]
margin_left = 56.0
margin_top = 136.0
margin_right = 560.0
margin_bottom = 304.0
autoplay = true

[node name="NãHáPróximaFase" type="Label" parent="right_decision"]
margin_left = 390.0
margin_top = 301.0
margin_right = 619.0
margin_bottom = 315.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 57 )
text = "Fase 3 ainda não disponível !"

[node name="LinkButton2" type="LinkButton" parent="right_decision"]
margin_left = 68.0
margin_top = 159.0
margin_right = 488.0
margin_bottom = 197.0
focus_mode = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 58 )
action_mode = 0
text = "Clique aqui para acessar o conteúdo"
underline = 1

[node name="wrong_decision" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="FundoJogo21" type="Sprite" parent="wrong_decision"]
position = Vector2( 319.607, 181 )
scale = Vector2( 0.623815, 0.61 )
texture = ExtResource( 2 )

[node name="img_wrong_decision" type="TextureRect" parent="wrong_decision"]
margin_left = 22.0
margin_top = 37.0
margin_right = 624.0
margin_bottom = 379.0
texture = ExtResource( 24 )
expand = true

[node name="back_phase" type="Button" parent="wrong_decision"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 56.0
margin_top = 328.0
margin_right = 248.0
margin_bottom = 352.0

[node name="back_decision" type="Button" parent="wrong_decision"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 392.0
margin_top = 332.0
margin_right = 592.0
margin_bottom = 352.0

[node name="LinkButton" type="LinkButton" parent="wrong_decision"]
margin_left = 38.0
margin_top = 155.0
margin_right = 388.0
margin_bottom = 193.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 58 )
action_mode = 0
text = "Clique aqui para acessar o conteúdo"
underline = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 25 )
autoplay = true

[node name="dialogo_1" type="Control" parent="."]
margin_left = 52.0
margin_top = -30.0
margin_right = 92.0
margin_bottom = 10.0

[node name="Dialog1" type="ColorRect" parent="dialogo_1"]
margin_left = 450.0
margin_top = 197.0
margin_right = 581.0
margin_bottom = 347.0
color = Color( 0.223529, 0.25098, 0.27451, 1 )
script = ExtResource( 8 )
dialogPath = "res://dialogos/dialog4.tres"

[node name="Name" type="RichTextLabel" parent="dialogo_1/Dialog1"]
margin_left = 4.0
margin_top = 4.0
margin_right = 88.0
margin_bottom = 33.0
custom_colors/default_color = Color( 1, 1, 1, 1 )

[node name="Text" type="RichTextLabel" parent="dialogo_1/Dialog1"]
margin_left = 7.0
margin_top = 31.0
margin_right = 125.0
margin_bottom = 137.0
custom_colors/default_color = Color( 1, 1, 1, 1 )

[node name="Indicator" type="Polygon2D" parent="dialogo_1/Dialog1"]
position = Vector2( -20, 4 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 145, 133, 135, 133, 140, 140, 141.703, 137.615 )

[node name="poligono" type="AnimationPlayer" parent="dialogo_1/Dialog1/Indicator"]
autoplay = "movendo"
anims/movendo = SubResource( 22 )

[node name="Timer" type="Timer" parent="dialogo_1/Dialog1"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="dialogo_1/Dialog1"]
stream = ExtResource( 10 )

[connection signal="body_entered" from="cenario/icone_mesa/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="pressed" from="quest_work/quiz/button_quiz" to="." method="_on_button_quiz_pressed"]
[connection signal="pressed" from="quest_decision/quiz/right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="quest_decision/quiz/wrong" to="." method="_on_wrong_pressed"]
[connection signal="pressed" from="quest_decision/quiz/wrong2" to="." method="_on_wrong_pressed"]
[connection signal="pressed" from="right_decision/next_phase" to="." method="_on_next_phase_pressed"]
[connection signal="pressed" from="right_decision/back_phase" to="." method="_on_back_phase_pressed"]
[connection signal="pressed" from="right_decision/LinkButton2" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="wrong_decision/back_phase" to="." method="_on_back_phase_pressed"]
[connection signal="pressed" from="wrong_decision/back_decision" to="." method="_on_back_decision_pressed"]
[connection signal="pressed" from="wrong_decision/LinkButton" to="." method="_on_LinkButton_pressed"]
